Ajout lavaplayer Gestion slash commands et vérifs play

--- a/src/main/resources/shepard.properties
+++ b/src/main/resources/shepard.properties
@@ -1,8 +1,12 @@
 bot.token=
-bot.client.id="1176982221324828813",
-bot.guild.id="170238866966446080",
-bot.activity.type="PLAYING",
-bot.activity="your music selections"
+bot.client.id=1176982221324828813
+bot.guild.id=170238866966446080
+bot.activity.type=PLAYING
+bot.activity=your music selections
+# la-sono
+#bot.jukebox.channel.id=699232175777906699
+# testing-room
+bot.jukebox.channel.id=1284647747344928778
 bot.name=Liara
 
 server.port=8081
