--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <lombok.version>1.18.34</lombok.version>
         <logback.version>1.5.6</logback.version>
         <lavaplayer.version>2.2.1</lavaplayer.version>
+        <commons-lang3.version>3.17.0</commons-lang3.version>
     </properties>
 
     <repositories>
@@ -105,6 +106,14 @@
             <artifactId>lavaplayer</artifactId>
             <version>${lavaplayer.version}</version>
         </dependency>
+
+        <!-- Apache -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
+
 
     </dependencies>
 
