--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <spring-boot.version>3.3.1</spring-boot.version>
         <lombok.version>1.18.34</lombok.version>
         <logback.version>1.5.6</logback.version>
-        <lavaplayer.version>2.2.1</lavaplayer.version>
+        <lavaplayer.version>2.2.2</lavaplayer.version>
         <commons-lang3.version>3.17.0</commons-lang3.version>
     </properties>
 
@@ -24,6 +24,11 @@
         <repository>
             <id>jitpack</id>
             <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>ll-releases</id>
+            <name>Lavalink Releases</name>
+            <url>https://maven.lavalink.dev/releases</url>
         </repository>
     </repositories>
 
@@ -107,6 +112,11 @@
             <version>${lavaplayer.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>dev.arbjerg</groupId>
+            <artifactId>lavalink-client</artifactId>
+            <version>3.1.0</version>
+        </dependency>
         <!-- Apache -->
         <dependency>
             <groupId>org.apache.commons</groupId>
